packages/wasm/ballerina-lang-go/parser/testdata/tokens/error/error_destructure_binding_pattern_error_cause.token
(public 6 0x00 ())
(function 8 0x00 ())
(ident, "main" 4 0x00 ())
(( 1 0x00 ())
() 1 0x00 ())
({ 1 0x00 ())
(string 6 0x00 ())
(ident, "errorMsg" 8 0x00 ())
(; 1 0x00 ())
(string 6 0x00 ())
(ident, "errorCause" 10 0x00 ())
(; 1 0x00 ())
(error 5 0x00 ())
(( 1 0x00 ())
(ident, "errorMsg" 8 0x00 ())
(, 1 0x00 ())
(error 5 0x00 ())
(( 1 0x00 ())
(ident, "errorCause" 10 0x00 ())
() 1 0x00 ())
() 1 0x00 ())
(= 1 0x00 ())
(error 5 0x00 ())
(( 1 0x00 ())
(string, ""msg"" 5 0x00 ())
(, 1 0x00 ())
(error 5 0x00 ())
(( 1 0x00 ())
(string, ""Error cause"" 13 0x00 ())
() 1 0x00 ())
() 1 0x00 ())
(; 1 0x00 ())
(} 1 0x00 ())
(2 0 0x00 ())
